--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
-  google_maps_routes: ^1.1.2
+
+google_maps_routes: ^1.1.2
   location: ^4.3.0
   geocode: ^1.0.1
   search_map_location: ^0.0.5
@@ -40,16 +41,13 @@ dependencies:
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geolocator: ^8.1.1
-
-
-
-
-
+  http: ^0.13.4
+  provider: ^6.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_polyline_points: ^1.0.0
+    flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
