--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
+  http: ^0.13.4
+  provider: ^6.0.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
