--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   google_maps_flutter: ^2.0.1
   http: ^0.13.4
   provider: ^6.0.2
-
+  shared_preferences: ^2.0.12
 
 
   # The following adds the Cupertino Icons font to your application.
