--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,18 +31,22 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
-
-google_maps_routes: ^1.1.2
-  location: ^4.3.0
-  geocode: ^1.0.1
-  search_map_location: ^0.0.5
-  http: ^0.13.4
-  flutter_google_places: ^0.3.0
-  flutter_map: ^0.14.0
-  latlong2: ^0.8.1
-  geolocator: ^8.1.1
   http: ^0.13.4
   provider: ^6.0.2
+  shared_preferences: ^2.0.12
+  cloud_firestore: ^3.1.7
+  firebase_auth: ^3.3.6
+  google_maps_routes: ^1.1.2
+    location: ^4.3.0
+    geocode: ^1.0.1
+    search_map_location: ^0.0.5
+    http: ^0.13.4
+    flutter_google_places: ^0.3.0
+    flutter_map: ^0.14.0
+    latlong2: ^0.8.1
+    geolocator: ^8.1.1
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
