--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your gallery to let you pick an image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to let you take an image</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need access to your microphone</string>
 </dict>
 </plist>
