--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^3.1.7
   firebase_auth: ^3.3.6
   firebase_storage: ^10.2.6
+  image_picker: ^0.8.4+5
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,7 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/default_profile_picture.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
