--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
 
   google_maps_flutter: ^2.0.1
   google_maps_routes: ^1.1.2
+  location: ^4.3.0
+  geocode: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
