--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,10 @@ dependencies:
   google_maps_flutter: ^2.0.1
   google_maps_routes: ^1.1.2
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_maps_routes: ^1.1.2
+  flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
   flutter_test:
