--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   google_maps_routes: ^1.1.2
   location: ^4.3.0
   geocode: ^1.0.1
+  search_map_location: ^0.0.5
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
