--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   geocode: ^1.0.1
   search_map_location: ^0.0.5
   http: ^0.13.4
+  flutter_google_places: ^0.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
