--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
