--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
+  trotter: ^1.2.0
+  distance: ^1.0.0
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
