--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
 
   google_maps_flutter: ^2.0.1
+  geolocator: ^8.1.1
+  provider: ^6.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
