--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   shared_preferences: ^2.0.12
+  firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
   firebase_auth: ^3.3.6
   firebase_storage: ^10.2.6
