--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,14 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MGLMapboxAccessToken</key>
+	<string>YOUR_PUBLIC_ACCESS_TOKEN</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
