Set up data and environment for directions between locations
- Add public and secret access tokens to relevant files
- Create .env file to store public access token in assets folder
- Retrieve  mapbox requests for cycling routes
- Create fake data for location placeholders

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MGLMapboxAccessToken</key>
-	<string>YOUR_PUBLIC_ACCESS_TOKEN</string>
+	<string>pk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempyNnZtajNkbmkybm8xb3lybWE3MTIifQ.AsZJbQPNRb2N3unNdA98nQ</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Helps improve Open Street Maps</string>
 	<key>NSLocationAlwaysUsageDescription</key>
