--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,21 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.10'
     repositories {
         google()
         mavenCentral()
+        maven { 
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+             }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = "mapbox"
+                // Use the secret token you stored in gradle.properties as the password
+                password = 'sk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempzdHIwaDAwemYyb21ubDF3d3ZpN3YifQ.mNTj5Qi2pyIeBzrFJllxiA'
+            }
+        }
     }
 
     dependencies {
