--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geolocator: ^8.1.1 
+  dio: ^4.0.4
+  flutter_dotenv: ^5.0.2
 
 
 
@@ -74,7 +76,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/config/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
