--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -32,6 +32,11 @@
 	<string>Helps improve Open Street Maps</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Helps improve Open Street Maps</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
