--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0" 
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,8 @@ dependencies:
   geolocator: ^8.1.1 
   dio: ^4.0.4
   flutter_dotenv: ^5.0.2
+  mapbox_gl: ^0.15.0
+  mapbox_navigation: ^1.0.3
 
 
 
@@ -52,6 +54,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
+  
 
 dev_dependencies:
   flutter_test:
