Use mapbox gl instead of latlong2

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -13,7 +13,7 @@ buildscript {
                 // This should always be `mapbox` (not your username).
                 username = "mapbox"
                 // Use the secret token you stored in gradle.properties as the password
-                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: "sk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempzdHIwaDAwemYyb21ubDF3d3ZpN3YifQ.mNTj5Qi2pyIeBzrFJllxiA"
+                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?:
             }
         }
     }
