Create basic route
- Use mapboxmap to render map (replace fluttermap)
- Create routes from current location to placeholder locations by using directions api
- Create placeholder buttons for showing route and starting turn-by-turn directions
- Add shared preferences to hold and access placeholder location data
- Add location helper to fetch longitude and latitude of locations
- Use map_screen_tbt.dart to render map and routes for development purposes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,14 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^8.1.1 
   dio: ^4.0.4
-  flutter_dotenv: ^5.0.2
+  flutter_dotenv: ^5.0.2  # for global variables - in .env file
   mapbox_gl: ^0.15.0
+  shared_preferences: ^2.0.13   # to store data for now (later use firebase)
+  
+  
+  
+  # to load global variables 
+
 
 
 
