--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geolocator: ^8.1.1 
+  flutter_bloc: ^8.0.1
+
+  provider: ^6.0.2
 
 
 
