Create Skeleton for turn by turn navigation
- Create turn_by_turn_screen.dart in screens
- Add documentation example in turn_by_turn_screen.dart
- Update minSdkVersion from 20 to 21 inandroid/app/build.gradle

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^3.0.0
   shared_preferences: ^2.0.13
   mapbox_gl: ^0.15.0
+  flutter_mapbox_navigation: ^0.0.26
 
 
   # The following adds the Cupertino Icons font to your application.
