--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,8 @@ flutter:
   assets:
     - assets/config/
     - assets/icon/
-  #   - images/a_dot_ham.jpeg
+    - assets/icon/red.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
