--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,7 @@ dependencies:
   flutter_polyline_points: ^1.0.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
