Add tests for weather manager

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   google_maps_flutter: ^2.0.1
   http: ^0.13.4
   provider: ^6.0.2
-  shared_preferences: ^2.0.12
   firebase_core: ^1.12.0
   cloud_firestore: ^3.1.7
   firebase_auth: ^3.3.6
@@ -48,7 +47,7 @@ dependencies:
   flutter_google_places: ^0.3.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
-  geolocator: ^8.1.1 
+  geolocator: ^8.1.1
   favorite_button: ^0.0.4
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^1.0.0+2
@@ -56,6 +55,10 @@ dependencies:
 
 
 
+
+  shared_preferences: ^2.0.13
+  mapbox_gl: ^0.15.0
+  sliding_up_panel: ^2.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
