--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -30,6 +30,16 @@
 	<string>We need access to your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need access to your gallery to let you pick an image</string>
+    <key>MGLMapboxAccessToken</key>
+    <string>pk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempyNnZtajNkbmkybm8xb3lybWE3MTIifQ.AsZJbQPNRb2N3unNdA98nQ</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Helps improve Open Street Maps</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Helps improve Open Street Maps</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Helps improve Open Street Maps</string>
+
+
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
