--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,6 +34,12 @@ target 'Runner' do
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
 end
 
+# post_install do |installer|
+#   installer.pods_project.targets.each do |target| 
+#     flutter_additional_ios_build_settings(target) 
+#   end
+# end
+
 post_install do |installer|
   installer.pods_project.targets.each do |target| 
     flutter_additional_ios_build_settings(target) 
@@ -42,3 +48,16 @@ post_install do |installer|
     config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
   end
 end
+
+
+# post_install do |installer_representation|
+#   installer_representation.pods_project.targets.each do |target|
+#       target.build_configurations.each do |config|
+#           config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+#           config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+#       end
+#   end
+# end
+#  installer.pods_project.build_configurations.each do |config|
+# config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+# end
