Refactor docking station card

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^1.0.0+2
   flutterfire_ui: ^0.3.4
-
+  font_awesome_flutter: ^9.2.0
 
 
 
