--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_launcher_icons: ^0.9.2
   flutter:
     sdk: flutter
 
@@ -74,6 +75,10 @@ dev_dependencies:
     sdk: flutter
   test:
 
+flutter_icons:
+  image_path: "assets/images/logo.png"
+  android: true
+  ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
