--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Veloplan</string>
+	<string>Newone</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -13,44 +13,17 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>veloplan</string>
+	<string>newone</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
+	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>MGLMapboxAccessToken</key>
-	<string>pk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempyNnZtajNkbmkybm8xb3lybWE3MTIifQ.AsZJbQPNRb2N3unNdA98nQ</string>
-	<key>NSCameraUsageDescription</key>
-	<string>We need access to your camera to let you take an image</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>We need access to your microphone</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to your gallery to let you pick an image</string>
-	<key>MGLMapboxAccessToken</key>
-	<string>pk.eyJ1IjoibW9ja2luZ2JpcmRzIiwiYSI6ImNrempyNnZtajNkbmkybm8xb3lybWE3MTIifQ.AsZJbQPNRb2N3unNdA98nQ</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Helps improve Open Street Maps</string>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>location</string>
-	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -69,6 +42,6 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
