--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
   mockito: ^5.1.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
