--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/flutter,dart,linux,macos,windows,visualstudio,androidstudio,xcode,android
-# Edit at https://www.toptal.com/developers/gitignore?templates=flutter,dart,linux,macos,windows,visualstudio,androidstudio,xcode,android
+# Created by https://www.toptal.com/developers/gitignore/api/androidstudio,android,flutter,dart,visualstudio,visualstudiocode,windows,macos,linux,java,kotlin,firebase
+# Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio,android,flutter,dart,visualstudio,visualstudiocode,windows,macos,linux,java,kotlin,firebase
 
 ### Android ###
 # Gradle files
@@ -75,6 +75,15 @@ doc/api/
 # dotenv environment variables file
 .env
 
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
+
 ### Flutter ###
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -134,6 +143,44 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+### Java ###
+# Compiled class file
+*.class
+
+# Log file
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+### Kotlin ###
+# Compiled class file
+
+# Log file
+
+# BlueJ files
+
+# Mobile Tools for Java (J2ME)
+
+# Package Files #
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+
 ### Linux ###
 *~
 
@@ -178,6 +225,27 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# Support for Project snippet scope
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -204,22 +272,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-### Xcode ###
-## User settings
-xcuserdata/
-
-## Xcode 8 and earlier
-*.xcscmblueprint
-*.xccheckout
-
-### Xcode Patch ###
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcodeproj/xcshareddata/
-!*.xcworkspace/contents.xcworkspacedata
-/*.gcno
-**/xcshareddata/WorkspaceSettings.xcsettings
-
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
 
@@ -231,7 +283,6 @@ xcuserdata/
 *.dex
 
 # Java class files
-*.class
 
 # Generated files
 bin/
@@ -311,14 +362,10 @@ obj/
 .settings/
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
 
 # Package Files #
-*.war
-*.ear
 
 # virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
-hs_err_pid*
 
 ## Plugin-specific files:
 
@@ -717,15 +764,9 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # VS Code files for those working on multiple tools
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 *.code-workspace
 
 # Local History for Visual Studio Code
-.history/
 
 # Windows Installer files from build outputs
 
@@ -735,4 +776,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/flutter,dart,linux,macos,windows,visualstudio,androidstudio,xcode,android
+# End of https://www.toptal.com/developers/gitignore/api/androidstudio,android,flutter,dart,visualstudio,visualstudiocode,windows,macos,linux,java,kotlin,firebase
