--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
   mockito: ^5.1.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
