--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -38,6 +38,17 @@
 	<string>We need access to your microphone</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>We need access to your gallery to let you pick an image</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Helps improve Open Street Maps</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
