--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,22 +51,25 @@ dependencies:
   favorite_button: ^0.0.4
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^1.0.0+2
+  flutterfire_ui: ^0.3.4
+  font_awesome_flutter: ^9.2.0
   extended_nested_scroll_view: ^5.0.0
-
-
-
-
+  flutter_mapbox_navigation: ^0.0.26
   shared_preferences: ^2.0.13
   mapbox_gl: ^0.15.0
   sliding_up_panel: ^2.0.0+1
+  permission_handler: ^9.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_polyline_points: ^1.0.0
-  mockito: ^5.1.0
   dio: ^4.0.4
+  flutter_dotenv: ^5.0.2
+  mockito: ^5.1.0
+  dartleaf: ^1.1.4
+  tuple: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -94,7 +97,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/default_profile_picture.jpg
+    #- assets/images/
+    #- assets/config/
+    - assets/icon/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
