--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   dartleaf: ^1.1.4
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
