Add Group ID widget

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   dartleaf: ^1.1.4
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
+  otp_text_field: ^1.1.2
 
 dev_dependencies:
   flutter_test:
