--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
   flutter_spinkit: ^5.1.0
+  otp_text_field: ^1.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -103,5 +105,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
-  
