--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,6 @@ dependencies:
   location: ^4.3.0
   geocode: ^1.0.1
   search_map_location: ^0.0.5
-  flutter_google_places: ^0.3.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geolocator: ^8.1.1
@@ -57,6 +56,8 @@ dependencies:
   scoped_model: ^2.0.0-nullsafety.0
   flutter_spinkit: ^5.1.0
   table_calendar: ^3.0.4
+  fake_cloud_firestore: ^1.2.2
+
 
 dev_dependencies:
   flutter_test:
