--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
   flutter_spinkit: ^5.1.0
+  integration_test: 
+    sdk: flutter
+    version: ^0.0.0
 
 dev_dependencies:
   flutter_test:
