--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.4
   flutter_dotenv: ^5.0.2
-  mockito: ^5.1.0
   dartleaf: ^1.1.4
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
@@ -62,6 +61,9 @@ dependencies:
 
 
 dev_dependencies:
+  code_builder: ^4.0.0
+  build_runner: ^2.0.0
+  mockito: ^5.1.0
   flutter_test:
     sdk: flutter
   test:
