--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,12 @@ dependencies:
   location: ^4.3.0
   geocode: ^1.0.1
   search_map_location: ^0.0.5
+  flutter_google_places: ^0.3.0
   flutter_map: ^0.14.0
   latlong2: ^0.8.1
   geolocator: ^8.1.1
   favorite_button: ^0.0.4
+  timeline_tile: ^2.0.0
   carousel_slider: ^4.0.0
   smooth_page_indicator: ^1.0.0+2
   flutterfire_ui: ^0.3.4
@@ -40,9 +42,6 @@ dependencies:
   url_launcher:
   settings_ui: ^2.0.2
   flutter_mapbox_navigation: ^0.0.26
-  timeline_tile: ^2.0.0
-
-
   shared_preferences: ^2.0.13
   mapbox_gl: ^0.15.0
   sliding_up_panel: ^2.0.0+1
@@ -57,9 +56,6 @@ dependencies:
   tuple: ^2.0.0
   scoped_model: ^2.0.0-nullsafety.0
   flutter_spinkit: ^5.1.0
-  table_calendar: ^3.0.4
-  fake_cloud_firestore: ^1.2.2
-
 
 dev_dependencies:
   flutter_test:
