--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   table_calendar: ^3.0.4
   fake_cloud_firestore: ^1.2.2
+  velocity_x: ^3.4.0
 
 
 dev_dependencies:
