--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,13 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
-  test:
+  test: 
+  integration_test:
+    sdk: flutter
 
 flutter_icons:
   image_path: "assets/images/logo.png"
