--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   dartleaf: ^1.1.4
   tuple: ^2.0.0
+  timelines: ^0.1.0
   scoped_model: ^2.0.0-nullsafety.0
   flutter_spinkit: ^5.1.0
   table_calendar: ^3.0.5
